@@ -206,6 +206,8 @@ fixed bugs:
   variable fixed to +/-infinity (depending on the sign of the scalar) but does not multiply with the scalar, anymore
 - primal solutions with infinite objective value are now automatically discarded
 - fixed bug that disabled multi-aggregation of two integer or implicit integer variables
+- fixed bug in sol.c with requesting values of transformed variables in original solution; previously this had only
+  been handled in SCIPgetSolVal(), now the handling has been moved to SCIPsolGetVal()
 
 parameters:
 - new parameter <presolving/convertinttobin/maxdomainsize> by default is set to SCIP_LONGINT_MAX, which deternmines
